build(maven): adicionar plugin Spring Boot e configurar Maven Compiler Plugin
Adicionado plugin Spring Boot para empacotamento da aplicação em um JAR executável.
Configurado Maven Compiler Plugin com ajustes de memória e argumentos específicos de
compilação para otimizar o processo de build e desempenho.

Note: Essas configurações melhoram o empacotamento e permitem maior controle
sobre os parâmetros de compilação no Maven.

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,8 @@
     <properties>
         <main.basedir>${basedir}</main.basedir>
         <java.version>17</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -66,6 +68,33 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                    
+                    <fork>true</fork>
+                    <meminitial>128m</meminitial>
+                    <maxmem>1024m</maxmem>
+                    
+                    <compilerArgs>
+                        <arg>-verbose</arg>
+                        <arg>-Xlint:all,-options,-path</arg>
+                    </compilerArgs>
+                    
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
             </plugin>
         </plugins>
     </build>
