build(maven): adicionar maven-dependency-plugin para download de fontes das dependências
Configurado maven-dependency-plugin para realizar o download automático do código-fonte das
dependências do projeto, auxiliando na depuração e entendimento das bibliotecas utilizadas
ao facilitar o acesso ao código fonte das mesmas.

Note: Para baixar o código-fonte, basta executar o comando 'mvn dependency:sources'.

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,21 @@
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>sources</goal>
+                        </goals>
+                        <configuration>
+                            <silent>true</silent>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
