build(maven): adicionar Apache Maven Resources Plugin e habilitar filtragem de variáveis
Adicionado o Apache Maven Resources Plugin no pom.xml para permitir a substituição de variáveis
em arquivos como application.properties, usando delimitadores personalizados. Habilitada a
filtragem para que o Maven processe esses arquivos e substitua as variáveis pelos valores do
pom.xml ou de um arquivo de filtro, facilitando a configuração dinâmica das propriedades do
projeto.

note: Verificar se todas as variáveis foram corretamente definidas nos arquivos de filtro ou
no pom.xml.

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
         <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <resource.delimiter>@</resource.delimiter>
     </properties>
 
     <dependencies>
@@ -64,6 +65,13 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -110,6 +118,19 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <configuration>
+                    <propertiesEncoding>${project.build.sourceEncoding}</propertiesEncoding>
+                    <delimiters>
+                        <delimiter>${resource.delimiter}</delimiter>
+                    </delimiters>
+                    <useDefaultDelimiters>false</useDefaultDelimiters>
+                </configuration>
             </plugin>
         </plugins>
     </build>
