build: adicionar Lombok ao projeto e configurar Eclipse IDE
Lombok adicionado como dependência para reduzir código boilerplate com
geração automatizada
de getters, setters e construtores. Plugin do Lombok configurado no
Eclipse para suporte
total às anotações da biblioteca, conforme o guia oficial.

note: Verifique se o Eclipse reconhece as anotações para correto funcionamento do Lombok.

--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-    
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -86,6 +97,14 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
             </plugin>
 
             <plugin>
@@ -94,17 +113,6 @@
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
-                    
-                    <fork>true</fork>
-                    <meminitial>128m</meminitial>
-                    <maxmem>1024m</maxmem>
-                    
-                    <compilerArgs>
-                        <arg>-verbose</arg>
-                        <arg>-Xlint:all,-options,-path</arg>
-                    </compilerArgs>
-                    
-                    <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
 
