--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,12 +1,11 @@
 spring.application.name=@project.name@
 
 # H2 Web Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+spring.h2.console.enabled=false
 
-spring.datasource.username=${DATASOURCE_USERNAME}
-spring.datasource.password=${DATASOURCE_PASSWORD}
-spring.datasource.url=jdbc:h2:file:../resume;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.url=jdbc:h2:mem:RESUME_TEST;
 spring.datasource.driver-class-name=org.h2.Driver
 
 spring.datasource.hikari.connection-test-query=select 1
