chore: adicionar e configurar MapStruct para mapeamento de entidades e DTOs
Adicionado o MapStruct ao projeto e configurado para simplificar o mapeamento entre entidades
e DTOs de forma automática e eficiente. A configuração permite o uso de mapeamentos personalizados
e a geração de código otimizado para conversões.

Note: O uso do MapStruct reduz a complexidade dos mapeamentos manuais e facilita a manutenção.

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
         <skipUnitTests>false</skipUnitTests>
         <skipIntegrationTests>false</skipIntegrationTests>
         <testFailureIgnore>false</testFailureIgnore>
+        <org.mapstruct.version>1.6.3</org.mapstruct.version>
     </properties>
 
     <dependencies>
@@ -84,6 +85,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${org.mapstruct.version}</version>
         </dependency>
 
         <dependency>
@@ -134,6 +141,17 @@
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </path>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>${org.mapstruct.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
 
